- In-browser soundbites recording - Admin mode to remove songs (long-press/right-click title, then long-press/right-click the soundbite) - Speaker client registers to server - Dynamically show remote playback depending on whether client is registered - Don't use Google Fonts

--- a/client-windows/client.ini
+++ b/client-windows/client.ini
@@ -1,2 +1,4 @@
 [Soundboard]
-url=http://server-address.com
+url=http://127.0.0.1
+playbackcmd=mpv.exe --af=lavfi=dynaudnorm --af-add=lavfi=[apad=pad_dur=1] --no-audio-display
+querydelay=1000
